--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
                 </div>
 
-                <p class="footer__copy">&#169; RohitRo. ALl rights reserved</p>
+                <p class="footer__copy">&#169; RohitRo. ALL rights reserved</p>
 
             </div>
         </footer>
